tests/negative/neg_pr1162_removed_goto.safe
package neg_PR1162_Removed_Goto

   function build returns integer

      goto Done;
      return 0;
